# smt-data-exporter-python

./: .env.example  .gitignore  Dockerfile  README-LAMBDA.md  README.md  cloudformation.yaml  config.toml.example  deploy.sh  docker-compose.yml  docker-entrypoint.sh  lambda_function.py  main.py  models.py  pyproject.toml  settings.py  test_calculation.py  test_lambda_local.py
.github/workflows/: docker-push.yml  publish.yml
cdk/: README.md  cdk-deploy.sh  cdk.json  package.json  tsconfig.json
