[project]
name = "smt-data-exporter-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2025.8.3",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyopenssl>=25.1.0",
    "smart-meter-texas>=0.5.5",
    "ynab>=1.8.0",
]
